opam-version: "2.0"
synopsis: "Pure, direct-style OCaml STUN Protocol"
description: ""
maintainer: ["patrick@sirref.org"]
authors: ["Patrick Ferris"]
license: "ISC"
depends: [
  "dune" {>= "3.4"}
  "eio"  {>= "0.6"}
  "alcotest" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
